k8s/frontend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devsecops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: 425034746703.dkr.ecr.ap-south-1.amazonaws.com/devsecops-frontend:latest

          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devsecops

spec:
  type: LoadBalancer
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80
