k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: devsecops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
        - name: order-service
          image: 425034746703.dkr.ecr.ap-south-1.amazonaws.com/devsecops-order-service:30

          ports:
            - containerPort: 8083
---

apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: devsecops

spec:
  selector:
    app: order-service

  ports:
    - name: http
      port: 8083
      targetPort: 8083

  type: ClusterIP
