k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: devsecops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
        - name: product-service
          image: 425034746703.dkr.ecr.ap-south-1.amazonaws.com/devsecops-product-service:31

          ports:
            - containerPort: 8082
---

apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: devsecops

spec:
  selector:
    app: product-service

  ports:
    - name: http
      port: 8082
      targetPort: 8082

  type: ClusterIP
