k8s/user-service.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: user-service
  namespace: devsecops
spec:
  replicas: 1

  revisionHistoryLimit: 3

  rollbackWindow:
    revisions: 3

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 124666675720.dkr.ecr.ap-south-1.amazonaws.com/devsecops-user-service

          command:
            - java
          args:
            - "-javaagent:/otel/opentelemetry-javaagent.jar"
            - "-jar"
            - "/app/app.jar"

          ports:
            - containerPort: 8081

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

  strategy:
    blueGreen:
      activeService: user-service
      previewService: user-service-preview

      autoPromotionEnabled: false

      prePromotionAnalysis:
      templates:
        - templateName: user-service-pre-promotion
      
      args:
        - name: service-name
          value: user-service-preview

      scaleDownDelaySeconds: 30

      previewReplicaCount: 1

---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: devsecops
  labels:
    app: user-service
spec:
  selector:
    app: user-service

  ports:
    - name: http
      port: 8081
      targetPort: 8081

  type: ClusterIP


---
apiVersion: v1
kind: Service
metadata:
  name: user-service-preview
  namespace: devsecops
  labels:
    app: user-service
spec:
  selector:
    app: user-service

  ports:
    - name: http
      port: 8081
      targetPort: 8081

  type: ClusterIP
