k8s/frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: devsecops

spec:
  parentRefs:
    - name: devsecops-gateway
  rules:
    - matches:
      - path:
          type: PAthPrefixx
          value: /
      backendRefs:
        - name: frontend-service
          port: 80
