k8s/product-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: product-route
  namespace: devsecops
spec:
  parentRefs:
    - name: devsecops-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/products
      backendRefs:
        - name: product-service
          port: 8082
