k8s/user-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-route
  namespace: devsecops
spec:
  parentRefs:
    - name: devsecops-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth
        - path:
            type: PathPrefix
            value: /api/users
      backendRefs:
        - name: user-service
          port: 8081
